--- a/package.json
+++ b/package.json
@@ -9,6 +9,9 @@
     "type": "git",
     "url": "https://github.com/Rahul9046/eslint-plugin-good-practices"
   },
+  "scripts": {
+    "test": "./node_modules/.bin/mocha tests/*"
+  },
   "keywords": [
     "good-practices",
     "eslint-plugin",
