add precommit as dev dependency

--- a/package.json
+++ b/package.json
@@ -19,7 +19,8 @@
   ],
   "devDependencies": {
     "eslint": "^5.15.1",
-    "mocha": "^6.0.2"
+    "mocha": "^6.0.2",
+    "pre-commit": "^1.2.2"
   },
   "pre-commit": {
     "run": [
